# VehicleControl

./: README.md
control/: CMakeLists.txt  package.xml
control/conf/: control_conf.txt  control_conf.yaml
control/conf/controller_conf/: PID_controller_conf.txt
control/include/control/: Control.h  ControlConf.h  (+3 more)
control/launch/: demo.launch  empty.launch  gmapping.launch  position_test.launch  ramp.launch  record_trajectory.launch  run_in_empty_world.launch  run_in_empty_world_reverse.launch  run_in_ramp.launch  run_in_simulation_world.launch  run_in_true_trajectory.launch  run_with_carsim.launch  trajectory_plot.launch
control/plot_py/: read_data.py  result_plot.py  simulation_result_LQR_Controller_10.txt  simulation_result_MPC_Controller_10.txt  simulation_result_Pure_Pursuit_Controller_10.txt  simulation_result_Rear_Wheel_Feedback_Controller_10.txt  simulation_result_Stanley_Controller_10.txt
control/plugins/: .PriusHybridPlugin.cc.swp  PriusHybridPlugin.cc  PriusHybridPlugin.hh
control/qpOASES-3.2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
control/scripts/: ReadRosBag.py  TrajectoryPlotter.py
control/src/: Control.cpp  ControlConf.cpp  ControlMain.cpp  TrajectoryAnalyzer.cpp  VehicleState.cpp
control/worlds/: mcity.world  mcity_2.world  ramp.world
control/yaml/: lattice_planner.yaml  vehicle_state.yaml
multi_launch/: carsim.sh  forward.sh  reverse.sh  run_in_ramp.sh  simulated_world.sh
nox_msgs/: CMakeLists.txt  README.md  package.xml
nox_msgs/include/: nox_msgs.h
nox_msgs/msg/: Bound.msg  Boundary.msg  Chassis.msg  DrivingCommand.msg  Function.msg  Group.msg  GuideLine.msg  Lane.msg  Obstacle.msg  ObstacleArray.msg  Overlap.msg  Path.msg  PathPoint.msg  Road.msg  RoadBlock.msg  Scene.msg  Signal.msg  SignalArray.msg  SpeedControl.msg  Status.msg  StatusArray.msg  StopLine.msg  Trajectory.msg  TrajectoryPoint.msg  Vehicle.msg
nox_msgs/srv/: GetScene.srv
plan/: CMakeLists.txt  package.xml
plan/conf/: planning_conf.txt
plan/include/planning/: BoundingBox.h  Frame.h  FrenetPath.h  GlobalTrajectory.h  Obstacle.h  Planning.h  PlanningConf.h  PlanningPrivate.h  Polynomial.h  TrajectoryGenerator.h  VehicleState.h
plan/include/planning/Planner/: LatticePlanner.h  Planner.h  PlannerAgent.h
plan/launch/: publish_mat_trajectory.launch  publish_ontime_trajectory.launch  publish_recorded_trajectory.launch  publish_reverse_trajectory.launch  publish_trajectory_with_slope.launch
plan/src/: BoundingBox.cpp  Frame.cpp  FrenetPath.cpp  GlobalTrajectory.cpp  Obstacle.cpp  Planning.cpp  PlanningConf.cpp  PlanningMain.cpp  Polynomial.cpp  TrajectoryGenerator.cpp  VehicleState.cpp  publish_path_once.cpp
plan/src/Planner/: LatticePlanner.cpp  Planner.cpp  PlannerAgent.cpp
plan/test_trajectories/: mat_reverse_trajectory_10.txt  mat_reverse_trajectory_15.txt  mat_simple_trajectory_10.txt  mat_simple_trajectory_15.txt  mat_simple_trajectory_20.txt  mat_trajectory_10.txt  mat_trajectory_15.txt  mat_trajectory_20.txt  mat_trajectory_25.txt  recorded_trajectory_1_record.txt  recorded_trajectory_2_record.txt  recorded_trajectory_slope.txt  shuangyixian.txt  true_trajectory_5.txt
prius_msgs/: CMakeLists.txt
prius_msgs/msg/: Augmented_My_Trajectory_Point.msg  DimensionInfo.msg  LateralData.msg  LongitudinalData.msg  My_Trajectory.msg  My_Trajectory_Point.msg  ObstacleAttr.msg  Obstacles.msg  VehicleInfo.msg
(+23 files in other folders)
